docs/EBNF.txt

(* Modest Language Grammar — EBNF *)
(* Updated to match parser.py actual behaviour *)

(* ─── Lexical basics ─── *)

NL     = '\n'
sep    = ';' | NL
lsep   = ',' | NL

id  ::= '_'* <small_letter> (<letter> | <digit> | '_')*
Id  ::= '_'* <big_letter>   (<letter> | <digit> | '_')*

(* Identifiers are ASCII-Latin only. Unicode is allowed solely inside  *)
(* string literals and comments; an exotic character in an identifier  *)
(* is reported by the lexer.  (digit is defined below, with numbers.)  *)
small_letter ::= 'a'..'z'
big_letter   ::= 'A'..'Z'
letter       ::= small_letter | big_letter

comment_line  ::= '//' <text to end of line>
comment_block ::= '/*' <any text> '*/'
comment       ::= comment_line | comment_block


(* ─── Module (top level) ─── *)

module ::= ['module' value_literal_string NL]
           (def | directive | comment | NL)*

directive ::= import | include | pragma

import  ::= 'import'  value_literal_string ['as' id]
include ::= 'include' value_literal_string
pragma  ::= 'pragma'  id value_expr*

annotation      ::= '@' id ['(' [arguments] ')']
access_modifier ::= 'public' | 'private'

def ::= annotation* [access_modifier] (def_type | def_const | def_var | def_func)

def_type  ::= 'type' Id '=' type_expr
def_const ::= 'const' field_decl
def_var   ::= 'var'   field_decl (',' field_decl)*
def_func  ::= 'func'  id ':' type_expr [block]
              (* body optional = forward decl *)
              (* 'type_expr' is usually an inline type_func_expr, but may
                 name a predeclared function type instead *)
              (* the ':' may be omitted for backward compatibility but
                 triggers a deprecation warning *)

field_decl ::= id [':' type_expr] ['=' value_expr]


(* ─── Block & Statements ─── *)

block ::= '{' (statement | comment | NL)* '}'

statement ::=
    | def_type
    | def_const
    | def_var
    | def_func
    | stmt_let
    | stmt_if
    | stmt_while
    | stmt_return
    | stmt_break
    | stmt_again
    | stmt_inc
    | stmt_dec
    | stmt_asm
    | stmt_assign_or_expr

stmt_let   ::= 'let'    field_decl
stmt_if    ::= 'if' value_expr block ['else' (block | stmt_if)]
stmt_while ::= 'while'  value_expr block
stmt_return::= 'return' [value_expr]
stmt_break ::= 'break'
stmt_again ::= 'again'
stmt_inc   ::= '++' value_expr          (* prefix only *)
stmt_dec   ::= '--' value_expr          (* prefix only *)
stmt_asm   ::= '__asm' '(' value_expr (',' value_expr)* ')'

stmt_assign_or_expr ::= value_expr ['=' value_expr]


(* ─── Type expressions ─── *)

type_expr ::= annotation* type_expr_inner

type_expr_inner ::=
    | Id                                          (* named type: Int32, MyRecord, … *)
    | '*' type_expr                               (* pointer: *Int32, **Foo *)
    | '[' [value_expr] ']' type_expr              (* array: [10]Int32, []Int32 *)
    | '(' [params] ['...'] ')' '->' type_expr     (* function type *)
    | ['record'] '{' [fields] '}'                 (* record type *)

type_func_expr ::= '(' [params] ['...'] ')' '->' type_expr

fields ::= (annotation* [access_modifier] field_decl) (lsep (annotation* [access_modifier] field_decl))*
params ::= field_decl (lsep field_decl)*


(* ─── Value expressions (precedence: lowest → highest) ─── *)

value_expr ::= expr_1

expr_1  ::= expr_2 ('or'  expr_2)*                     (* logical or  *)
expr_2  ::= expr_3 ('and' expr_3)*                     (* logical and *)

(* Comparison: one level.  An equality and an ordering may not be chained
   without parentheses (`a == b < c` is rejected); `==` / `!=` may. *)
expr_3  ::= expr_4 (('==' | '!=' | '<' | '>' | '<=' | '>=') expr_4)*

(* Additive and bitwise: one level, left to right.  The two halves never
   meet — `+` `-` take IntX/NatX/FloatX, the rest take WordX.  Among the
   bitwise operators the level has no order, so a chain may not mix two
   kinds without parentheses (`a | b & c` is rejected); `<<` and `>>` are
   one kind, each of `&` `|` `^` is a kind of its own. *)
expr_4  ::= expr_5 (('+' | '-' | '&' | '|' | '^' | '<<' | '>>') expr_5)*

expr_5  ::= expr_6 (('*' | '/' | '%') expr_6)*         (* multiplicative *)
expr_6  ::= type_expr expr_6 | expr_7                  (* type construction (not a cast!) *)
expr_7  ::= prefix_op* expr_8                          (* prefix / unary *)
expr_8  ::= expr_term postfix*                         (* postfix *)


(* Prefix / unary operators *)
prefix_op ::=
    | '*'                                              (* dereference *)
    | '&'                                              (* address-of  *)
    | 'not'                                            (* logical not *)
    | '~'                                              (* bitwise not *)
    | '+'                                              (* unary plus  *)
    | '-'                                              (* unary minus *)
    | 'new'
    | 'unsafe'
    | 'sizeof'   '(' (type_expr | value_expr) ')'
    | 'alignof'  '(' (type_expr | value_expr) ')'
    | 'offsetof' '(' type_expr '.' id ')'
    | 'lengthof' '(' (type_expr | value_expr) ')'
    | '__va_start' '(' value_expr ',' value_expr ')'
    | '__va_copy'  '(' value_expr ',' value_expr ')'
    | '__va_end'   '(' value_expr ')'
    | '__va_arg'   '(' value_expr ',' type_expr ')'
    | '__defined'  '(' (type_expr | value_expr) ')'


(* Postfix operators *)
postfix ::=
    | '(' [arguments] ')'                             (* call *)
    | '.' id                                          (* field access *)
    | '[' value_expr ']'                              (* index *)
    | '[' [value_expr] ':' [value_expr] ']'           (* slice *)


(* Terminal value expressions *)
expr_term ::=
    | '(' value_expr ')'                              (* subexpression *)
    | value_literal
    | id


(* ─── Arguments ─── *)

arguments ::= argument (lsep argument)*
argument  ::= [id '='] value_expr     (* named or positional *)


(* ─── Literals ─── *)

value_literal ::=
    | value_literal_number
    | value_literal_string
    | value_literal_array
    | value_literal_record

(* '_' is a digit separator, ignored by the lexer: 1_000_000, 0xFF_FF *)
value_literal_number ::= hex | dec
hex ::= '0x' hexdigit ('_'* hexdigit)*
dec ::= digit ('_'* digit)* ('.' digit ('_'* digit)*)?
digit    ::= '0' | '1' | '2' | '3' | '4' | '5' | '6' | '7' | '8' | '9'
hexdigit ::= digit | 'a'..'f' | 'A'..'F'

value_literal_string ::= ('"' string_char* '"') | ("'" string_char* "'")
string_char  ::= escaped_char | <any char except the enclosing quote or '\'>
escaped_char ::= '\'  ( '"' | "'" | '\' | 'n' | 't' | 'r' | 'a' | 'b' | 'v' | 'f'
                       | 'x' hexdigit hexdigit        (* \xHH — one byte *)
                       | 'u' '{' hexdigit{1,6} '}'     (* \u{H..H} — Unicode codepoint ≤ 10FFFF → UTF-8 *)
                       )

value_literal_array  ::= '[' (value_expr (lsep value_expr)*)? NL* ']'
value_literal_record ::= '{' (id '=' value_expr (lsep id '=' value_expr)*)? NL* '}'
