src/parser.py
# src/parser.py

import os

from hlir import *
from error import error, warning, info
from unicode import utf32cc_to_utf8_str

top_level_stoppers = ['type', 'let', 'const', 'var', 'func']
func_stoppers = ['let', 'var', 'if', 'while', 'return', 'type']

# 'func name: (...) -> Ret' is the recommended form; 'func name (...) -> Ret'
# still parses. Set to False to accept the colon-less form silently again,
# with no warning, while this syntax change is still being decided.
WARN_MISSING_FUNC_COLON = True


def ast_value_bad(ti):
	return {
		'isa': 'ast_value',
		'kind': 'bad',
		'anno': [],
		'ti': ti
	}


# `&`, `|`, `^` and the shifts share one precedence level, so a chain that
# mixes two of them has no grouping to fall back on and the parentheses have
# to be written down.  Operators of the same kind chain freely: `<<` and `>>`
# count as one kind, the other three as one kind each.
bitwise_kind_of_op = {
	HLIR_VALUE_OP_BITWISE_AND: '&',
	HLIR_VALUE_OP_BITWISE_OR: '|',
	HLIR_VALUE_OP_BITWISE_XOR: '^',
	HLIR_VALUE_OP_SHL: 'shift',
	HLIR_VALUE_OP_SHR: 'shift',
}

bitwise_kind_of_token = {
	'&': '&',
	'|': '|',
	'^': '^',
	'<<': 'shift',
	'>>': 'shift',
}

# `==`, `!=`, `<`, `>`, `<=` and `>=` share one precedence level, so a chain of
# two of them would group from the left, and the left half is always a `Bool`:
# `a == b < c` is `(a == b) < c` and `a < b == f` is `(a < b) == f`.  Neither is
# what the line was meant to say, so a chain is refused and the parentheses
# that would settle it have to be written down.
comparison_ops = EQ_OPS + RELATIONAL_OPS
comparison_tokens = ['==', '!=', '<', '>', '<=', '>=']

def isUpperIdentifierToken(token):
	# skip _ before letters
	while len(token) > 0 and token[0] == '_':
		token = token[1:]
	if len(token) > 0:
		return token[0].isupper()
	return False


class Parser:
	def __init__(self):
		self.comment = None
		pass

	def is_end(self):
		if self.tokens[self.ctoken][0] == None:
			return True
		return self.ctoken >= (len(self.tokens) - 1)


	#def is_blank(self, c):
	#	return c == ' ' or c == '\t' or c == '\n'

	def is_comment(self):
		c = self.ctok_class()
		return c in ['comment-line', 'comment-block']


	def skip1(self):
		if self.ctoken < (len(self.tokens) - 1):
			self.ctoken = self.ctoken + 1

	def skip(self, token):
		self.skip1()

	def skipn(self, token):
		while self.match(token):
			pass


	def ctok_class(self):
		return self.tokens[self.ctoken][0]


	def ctok(self):
		return self.tokens[self.ctoken][1]


	def getpos(self):
		return self.ctoken


	def setpos(self, pos):
		self.ctoken = pos

	# вернет ТОКЕН отстоящий на n от текущей позиции (или Null если там ничего нет)
	def get_ntok(self, n):
		if self.ctoken + n >= len(self.tokens):
			return None
		return self.tokens[self.ctoken + n]

	def nextok(self):
		t = self.get_ntok(1)
		if t == None:
			return None
		return t[1]


	def tokenInfo(self):
		assert(len(self.tokens[self.ctoken]) == 3)
		return self.tokens[self.ctoken][2]


	def textInfo(self):
		tokenInfo = self.tokenInfo()
		return TextInfo(start=tokenInfo, mid=tokenInfo, end=tokenInfo)


	def gettok(self):
		t = self.ctok()
		self.skip1()
		return t


	#skip_tokens_class(['nl'])
	def skip_tokens_class(self, classes):
		res = False
		while self.ctok_class() in classes:
			self.skip1()
			res = True
		return res


	def skip_tokens(self, tokens):
		while self.ctok() in tokens:
			self.skip1()


	def look(self, token):
		if self.ctok_class() in ('id', 'op', 'nl'):
			return self.ctok() == token
		return False


	def look_nl(self):
		return self.ctok_class() == 'nl'


	def match(self, token):
		hit = self.look(token)
		if hit:
			self.skip1()
		return hit


	def token_class_is(self, clas):
		c = self.ctok_class()
		if c == clas:
			return True
		return False


	def need(self, token):
		ti = self.textInfo()
		yes = self.match(token)
		if not yes:
			error("expected '%s' token" % token, ti)
		return yes


	def is_assign_operator(self):
		return self.look("=")  #or self.look("<-") or self.look(":=")

	def is_number(self):
		return self.ctok_class() == 'num'

	def is_identifier(self):
		return self.ctok_class() == 'id'

	def is_Identifier(self):
		return self.ctok_class() == 'Id'

	def is_string(self):
		return self.ctok_class() == 'str'

	def is_operator(self):
		return self.ctok_class() == 'op'

	def is_tag(self):
		return self.ctok_class() == 'tag'


	# value identifier: the first letter (leading '_' skipped) must be small
	def parse_identifier(self):
		ti = self.textInfo()
		s = self.gettok()
		if isUpperIdentifierToken(s):
			error("value identifier must start with a small letter; '%s' names a type" % s, ti)
		return {'isa': 'ast_id', 'kind': 'id', 'str': s, 'ti': ti}


	# type identifier: the first letter (leading '_' skipped) must be capital
	def parse_Identifier(self):
		ti = self.textInfo()
		s = self.gettok()
		if not isUpperIdentifierToken(s):
			error("type identifier must start with a capital letter; '%s' names a value" % s, ti)
		return {'isa': 'ast_id', 'kind': 'id', 'str': s, 'ti': ti}


	def need_sep(self, separators=['\n', ';'], stoppers=['}'], eat=True):
		if self.ctok() in separators:
			if eat:
				while self.is_operator() and self.ctok() in separators:
					self.skip1()

		elif self.ctok() in stoppers:
			pass
		elif self.ctok_class() in ['comment-line', 'comment-block']:
			self.skip1()
			pass
		else:
			error("expected separator", self.textInfo())
			self.restore(top_level_stoppers + func_stoppers)
			return False

		return True

	#
	# Parse Type
	#


	def parse_type_record(self, start_ti):
		mid_ti = self.tokenInfo()
		end_ti = None
		self.need("{")
		fields = []

		while True:
			nl_cnt = 0
			comments = []
			annotations = []

			# Skip blanks, handle comments & annotations
			while True:
				comm = self.parse_if_comment()
				if comm != None:
					comm['nl'] = nl_cnt
					nl_cnt = 0
					comments.append(comm)
				elif self.token_class_is('annotation'):
					x = self.parse_annotation()
					x['nl'] = nl_cnt
					annotations.append(x)
				elif self.match("\n"):
					nl_cnt += 1
				elif self.match(","):
					pass
				elif self.match(";"):
					pass
				else:
					break
			if self.look("}"):
				end_ti = self.tokenInfo()
				self.skip("}")
				break

			if self.is_end():
				end_ti = self.tokenInfo()
				error("expected '}' (unexpected end of file)", self.textInfo())
				break

			access_modifier = self.parse_access_modifier()
			f = self.parse_stmt_field()
			for ff in f:
				ff['access_modifier'] = access_modifier

			line_comm = self.parse_if_comment()

			if f != None:
				f[0].update({
					'anno': annotations,
					'comments': comments,
					'line_comment': line_comm,
					'nl': nl_cnt,
				})

				if len(f) > 1:
					for subf in f[1:]:
						subf.update({
							'anno': annotations,
							'line_comment': None,
							'comments': [],
							'nl': 1
						})

				fields.extend(f)

		return {
			'isa': 'ast_type',
			'kind': 'record',
			'fields': fields,
			'ti': TextInfo(start=start_ti, mid=mid_ti, end=end_ti)
		}


	def check_is_field(self):
		self.parse_access_modifier()
		if self.is_identifier():
			self.skip1()
			if self.match(':'):
				return True

			# still a field; parse_stmt_field() warns and recovers
			return self.missing_colon_type_follows()


	def is_annotation(self):
		return self.token_class_is('annotation')


	def check_is_type(self):
		self.parse_comments_annotations()

		if self.is_Identifier():
			return True

		elif self.is_identifier():
			# `record { ... }` — record type with explicit keyword
			if self.ctok() == 'record' and self.nextok() == '{':
				return True

			# parse type expressions like 'builtin.machine.Word'
			while self.is_identifier():
				self.skip1() # skip ident
				if self.ctok() != '.':
					return False
				self.skip1() # skip '.'
				if self.is_Identifier():
					return True

			return False

		elif self.is_operator():
			token = self.gettok()
			if token == '*':
				# maybe it is pointer? (or it's 'deref' operation)
				return self.is_type_expr()

			elif token == '[':
				# maybe it is array?
				# FIXIT: очень тупо все это, но пока для начальных тестов канает
				cc = 1
				while cc > 0:
					if self.is_end():
						return False
					elif self.match('['):
						cc += 1
					elif self.match(']'):
						cc -= 1
					else:
						self.skip1()
				rc = self.is_type_expr()
				return rc

			elif token == '(':
				self.skip_tokens_class(['nl'])
				#print("ok")
				# is ` ( <#type_expr#> ) ` ?
				if self.is_type_expr():
					return self.match(')')

				if self.match(")"):
					return self.match("->") or self.match("{")

				# maybe it's func?
				if not self.match(")"):
					if self.check_is_field():
						return True

				return False

			elif token == '{':
				# {} / {id: ...}
				while self.skip_tokens_class(['nl']) or self.skip_tokens_class(['comment-line']) or self.skip_tokens_class(['comment-block']) or self.is_annotation():
					if self.is_annotation():
						self.parse_annotation()
					pass
				if self.match('}'):
					return True
				self.skip_tokens_class(['nl'])
				self.match("public") or self.match("private")
				if self.is_identifier():
					self.skip1()
					if self.match(":"):
						return True
					return self.missing_colon_type_follows()


			return False

		elif self.is_annotation():
			self.parse_annotation()
			return self.check_is_type()

		else:
			return False

		return False


	def check(self, checker):
		pos = self.getpos()
		result = checker()
		self.setpos(pos)
		return result


	def is_type_expr(self):
		return self.check(self.check_is_type)

	# a ':' was expected but is missing; true if a type clearly follows
	# anyway (same line) — caller should warn and parse it as if the ':'
	# were there, instead of erroring out
	def missing_colon_type_follows(self):
		return not self.look_nl() and self.is_type_expr()

	def is_expr(self):
		return not self.is_type_expr()

	def parse_type_func(self):
		ti = self.textInfo()
		self.skip1()  # "("
		self.skip_tokens_class(['nl'])
		arghack = False
		fields = []
		while not self.match(")"):
			if self.is_end():
				error("expected ')' (unexpected end of file)", self.textInfo())
				break
			if self.is_identifier():
				f = self.parse_stmt_field()
				if isinstance(f, list):
					fields.extend(f)
				else:
					fields.append(f)
			elif self.match("..."):
				arghack = True
			self.match(",")
			self.skip_tokens_class(['nl'])

		if self.match("->"):
			t = self.expr_type()
			return {
				'isa': 'ast_type',
				'kind': 'func',
				'params': fields,
				'arghack': arghack,
				'to': t,
				'ti': ti
			}
		else:
			# error: function type return type not specified
			error("expected -> return type", ti)
			to = {
				'isa': 'ast_type',
				'kind': 'named',
				'id': {'isa': 'ast_id', 'kind': 'id', 'str': 'Unit', 'ti': ti},
				'anno': [],
				'ti': ti,
			}

			return {
				'isa': 'ast_type',
				'kind': 'func',
				'params': fields,
				'to': to,
				'arghack': arghack,
				'size': 0,
				'align': 0,
				'ti': ti
			}
		#return r


	def _parse_type_atom(self):
		start_ti = self.textInfo()

		if not self.is_type_expr():
			error("expected type expr", start_ti)
			return None

		# parse all annotations before
		annotations = []
		ca = self.parse_comments_annotations()
		#comments.extend(ca[0])
		annotations.extend(ca[1])

		start_ti = self.textInfo()

		t = {
			'isa': 'ast_type',
			'kind': 'unknown',
			'ti': start_ti
		}

		if self.look("("):
			t = self.parse_type_func()

		elif self.match("*"):
			to = self.expr_type()
			t = {
				'isa': 'ast_type',
				'kind': 'pointer',
				'to': to,
				'ti': TextInfo(start=start_ti, mid=start_ti, end=to['ti'])
			}

		elif self.look("{") or self.match("record"):
			t = self.parse_type_record(start_ti)

		elif self.match("["):
			size = None
			if self.match("]"):
				size = self.expr_ValueUndefined(start_ti)
			else:
				size = self.expr_value()
				self.need("]")
			of = self.expr_type()
			t = {
				'isa': 'ast_type',
				'kind': 'array',
				'of': of,
				'size': size,
				'ti': TextInfo(start=start_ti, mid=start_ti, end=of['ti'])
			}

		elif self.is_Identifier():
			id = self.parse_Identifier()
			t = {
				'isa': 'ast_type',
				'kind': 'named',
				'id': id,
				'ti': TextInfo(start=start_ti, mid=start_ti, end=start_ti)
			}

		elif self.is_identifier():
			left = [self.parse_identifier()]
			dot_ti = self.textInfo()
			if self.look("."):
				while self.match("."):
					if self.is_Identifier():
						break
					left.append(self.parse_identifier())

			right = self.parse_Identifier()
			#print(left)
			t = {
				'isa': 'ast_type',
				'kind': 'named',
				'module_path': left,
				'id': right,
				'ti': TextInfo(start=start_ti, mid=dot_ti, end=right['ti'])
			}

		t['anno'] = annotations
		return t


	def expr_type(self):
		t = self._parse_type_atom()
		if t is None:
			return None

		# or-type has the lowest priority: `*Int or Error` -> `(*Int) or Error`
		or_ti = self.textInfo()
		if self.match("or"):
			variants = [t]
			while True:
				r = self._parse_type_atom()
				variants.append(r)
				if not self.match("or"):
					break
			t = {
				'isa': 'ast_type',
				'kind': 'variant',
				'variants': variants,
				'anno': [],
				'ti': TextInfo(start=variants[0]['ti'], mid=or_ti, end=variants[-1]['ti'])
			}

		return t

	#
	# Parse Value
	#

	def expr_ValueUndefined(self, ti):
		return {
			'isa': 'ast_value',
			'kind': 'undefined',
			'anno': [],
			'ti': ti
		}


	def expr_value(self):
		x = self.expr_value_1()
		return x


	def expr_value_1(self):
		v = self.expr_value_2()
		while True:
			ti = self.textInfo()
			if self.match("or"):
				self.skipn("\n")
				r = self.expr_value_2()
				ti.start = v['ti']
				ti.end = r['ti']
				v = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_LOGIC_OR,
					'left': v,
					'right': r,
					'anno': [],
					'ti': ti
				}
			else:
				break
		return v


	def expr_value_2(self):
		v = self.expr_value_3()
		while True:
			ti = self.textInfo()
			if self.match("and"):
				self.skipn("\n")
				r = self.expr_value_3()
				ti.start = v['ti']
				ti.end = r['ti']
				v = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_LOGIC_AND,
					'left': v,
					'right': r,
					'anno': [],
					'ti': ti
				}
			else:
				break
		return v


	def expr_value_3(self):
		v = self.expr_value_4()
		while True:
			ti_mid = self.tokenInfo()
			ti = self.textInfo()

			if v['kind'] in comparison_ops and self.ctok() in comparison_tokens:
				error("required parentheses", ti)
				v = ast_value_bad(ti)

			if self.match("=="):
				self.skipn("\n")
				r = self.expr_value_4()
				v = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_EQ,
					'left': v,
					'right': r,
					'anno': [],
					'ti': TextInfo(start=v['ti'].start, mid=ti_mid, end=r['ti'].end)
				}
			elif self.match("!="):
				self.skipn("\n")
				r = self.expr_value_4()
				v = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_NE,
					'left': v,
					'right': r,
					'anno': [],
					'ti': TextInfo(start=v['ti'].start, mid=ti_mid, end=r['ti'].end)
				}
			elif self.match("<"):
				self.skipn("\n")
				r = self.expr_value_4()
				v = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_LT,
					'left': v,
					'right': r,
					'anno': [],
					'ti': TextInfo(start=v['ti'].start, mid=ti_mid, end=r['ti'].end)
				}
			elif self.match(">"):
				self.skipn("\n")
				r = self.expr_value_4()
				v = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_GT,
					'left': v,
					'right': r,
					'anno': [],
					'ti': TextInfo(start=v['ti'].start, mid=ti_mid, end=r['ti'].end)
				}
			elif self.match("<="):
				self.skipn("\n")
				r = self.expr_value_4()
				v = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_LE,
					'left': v,
					'right': r,
					'anno': [],
					'ti': TextInfo(start=v['ti'].start, mid=ti_mid, end=r['ti'].end)
				}
			elif self.match(">="):
				self.skipn("\n")
				r = self.expr_value_4()
				v = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_GE,
					'left': v,
					'right': r,
					'anno': [],
					'ti': TextInfo(start=v['ti'].start, mid=ti_mid, end=r['ti'].end)
				}
			else:
				break
		return v


	def expr_value_4(self):
		v = self.expr_value_5()
		while True:
			ti_mid = self.tokenInfo()

			# Two bitwise operators of different kinds, side by side and
			# unparenthesised.  Arithmetic is not part of this: `+` never
			# meets a WordX, so a mixed chain there is a type error and the
			# type error is the more useful thing to say.
			left_kind = bitwise_kind_of_op.get(v['kind'])
			if left_kind != None:
				op_kind = bitwise_kind_of_token.get(self.ctok())
				if op_kind != None and op_kind != left_kind:
					ti = self.textInfo()
					error("required parentheses", ti)
					# Take the operator and its right operand out of the way
					# and go on from a bad value: without this the rest of
					# the chain reports a second time, about types, over an
					# expression the parser has already refused.
					self.skip1()
					self.skipn("\n")
					self.expr_value_5()
					v = ast_value_bad(ti)
					continue

			if self.match("+"):
				self.skipn("\n")
				r = self.expr_value_5()
				v = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_ADD,
					'left': v,
					'right': r,
					'anno': [],
					'ti': TextInfo(start=v['ti'].start, mid=ti_mid, end=r['ti'].end)
				}
			elif self.match("-"):
				self.skipn("\n")
				r = self.expr_value_5()
				v = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_SUB,
					'left': v,
					'right': r,
					'anno': [],
					'ti': TextInfo(start=v['ti'].start, mid=ti_mid, end=r['ti'].end)
				}
			elif self.match("&"):
				self.skipn("\n")
				r = self.expr_value_5()
				v = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_BITWISE_AND,
					'left': v,
					'right': r,
					'anno': [],
					'ti': TextInfo(start=v['ti'].start, mid=ti_mid, end=r['ti'].end)
				}
			elif self.match("|"):
				self.skipn("\n")
				r = self.expr_value_5()
				v = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_BITWISE_OR,
					'left': v,
					'right': r,
					'anno': [],
					'ti': TextInfo(start=v['ti'].start, mid=ti_mid, end=r['ti'].end)
				}
			elif self.match("^"):
				self.skipn("\n")
				r = self.expr_value_5()
				v = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_BITWISE_XOR,
					'left': v,
					'right': r,
					'anno': [],
					'ti': TextInfo(start=v['ti'].start, mid=ti_mid, end=r['ti'].end)
				}
			elif self.match("<<"):
				self.skipn("\n")
				r = self.expr_value_5()
				v = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_SHL,
					'left': v,
					'right': r,
					'anno': [],
					'ti': TextInfo(start=v['ti'].start, mid=ti_mid, end=r['ti'].end)
				}
			elif self.match(">>"):
				self.skipn("\n")
				r = self.expr_value_5()
				v = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_SHR,
					'left': v,
					'right': r,
					'anno': [],
					'ti': TextInfo(start=v['ti'].start, mid=ti_mid, end=r['ti'].end)
				}
			else:
				break
		return v


	def expr_value_5(self):
		v = self.expr_value_6()
		while True:
			ti = self.textInfo()
			if self.match("*"):
				self.skipn("\n")
				r = self.expr_value_6()
				v = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_MUL,
					'left': v,
					'right': r,
					'anno': [],
					'ti': TextInfo(start=v['ti'].start, mid=ti, end=r['ti'].end)
				}
			elif self.match("/"):
				self.skipn("\n")
				r = self.expr_value_6()
				v = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_DIV,
					'left': v,
					'right': r,
					'anno': [],
					'ti': TextInfo(start=v['ti'].start, mid=ti, end=r['ti'].end)
				}
			elif self.match("%"):
				self.skipn("\n")
				r = self.expr_value_6()
				v = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_REM,
					'left': v,
					'right': r,
					'anno': [],
					'ti': TextInfo(start=v['ti'].start, mid=ti, end=r['ti'].end)
				}
			else:
				break
		return v


	def is_type_before_value(self):
		c = self.ctok_class()
		if c == 'num' or c == 'str':
			return False
		if c == 'id' and self.nextok() != '.':
			return False
		if not self.is_type_expr():
			return False
		if self.look("{"):
			if self.nextok() == "}":
				# Встретили в выражении значения {} и не понимаем это тип {} или значение {} ?
				# считаем что если дальше None | NL | ';' | ',' | ')' | ']' | '}' - то это литерал пустой записи
				# (эти токены не могут быть началом следующего значения, так что "тип перед значением" тут невозможен)
				nex = self.get_ntok(2)
				if nex == None:
					return False
				if (nex[0] == 'nl') or (nex[1] in (';', ',', ')', ']', '}')):
					return False
		return True

	# cons
	def expr_value_6(self):
		if self.is_type_before_value():
			ti = self.textInfo()
			t = self.expr_type()
			v = self.expr_value_6()
			return {
				'isa': 'ast_value',
				'kind': HLIR_VALUE_OP_CONS,
				'value': v,
				'type': t,
				'anno': [],
				'ti': TextInfo(start=ti, mid=ti, end=v['ti'].end)
			}

		else:
			return self.expr_value_7()



	def expr_value_7(self):
		start_ti = self.textInfo()
		if self.match("*"):
			v = self.expr_value_6()
			return {
				'isa': 'ast_value',
				'kind': HLIR_VALUE_OP_DEREF,
				'value': v,
				'anno': [],
				'ti': TextInfo(start=start_ti, mid=start_ti, end=v['ti'].end)
			}

		elif self.match("&"):
			v = self.expr_value_6()
			return {
				'isa': 'ast_value',
				'kind': HLIR_VALUE_OP_REF,
				'value': v,
				'anno': [],
				'ti': TextInfo(start=start_ti, mid=start_ti, end=v['ti'].end)
			}

		elif self.match("not"):
			v = self.expr_value_6()
			return {
				'isa': 'ast_value',
				'kind': HLIR_VALUE_OP_LOGIC_NOT,
				'value': v,
				'anno': [],
				'ti': TextInfo(start=start_ti, mid=start_ti, end=v['ti'].end)
			}

		elif self.match("~"):
			v = self.expr_value_6()
			return {
				'isa': 'ast_value',
				'kind': HLIR_VALUE_OP_BITWISE_NOT,
				'value': v,
				'anno': [],
				'ti': TextInfo(start=start_ti, mid=start_ti, end=v['ti'].end)
			}

		elif self.match("+"):
			v = self.expr_value_6()
			return {
				'isa': 'ast_value',
				'kind': HLIR_VALUE_OP_POS,
				'value': v,
				'anno': [],
				'ti': TextInfo(start=start_ti, mid=start_ti, end=v['ti'].end)
			}

		elif self.match("-"): #or self.match("−"):
			v = self.expr_value_6()
			return {
				'isa': 'ast_value',
				'kind': HLIR_VALUE_OP_NEG,
				'value': v,
				'anno': [],
				'ti': TextInfo(start=start_ti, mid=start_ti, end=v['ti'].end)
			}

		elif self.match("new"):
			v = self.expr_value()
			return {
				'isa': 'ast_value',
				'kind': HLIR_VALUE_OP_NEW,
				'value': v,
				'anno': [],
				'ti': TextInfo(start=start_ti, mid=start_ti, end=v['ti'].end)
			}

		elif self.match("unsafe"):
			v = self.expr_value()
			return {
				'isa': 'ast_value',
				'kind': HLIR_VALUE_OP_UNSAFE,
				'value': v,
				'anno': [],
				'ti': TextInfo(start=start_ti, mid=start_ti, end=v['ti'].end)
			}

		elif self.match("sizeof"):
			mid_ti = self.textInfo()
			self.skip("(")
			rv = None
			if self.is_type_expr():
				t = self.expr_type()
				rv = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_SIZEOF_TYPE,
					'type': t,
					'anno': [],
				}
			else:
				v = self.expr_value()
				rv = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_SIZEOF_VALUE,
					'value': v,
					'anno': [],
				}
			end_ti = self.tokenInfo()
			self.need(")")
			rv['ti'] = TextInfo(start=start_ti, mid=mid_ti, end=end_ti)
			return rv

		elif self.match("alignof"):
			mid_ti = self.textInfo()
			self.skip("(")
			rv = None
			if self.is_type_expr():
				t = self.expr_type()
				rv = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_ALIGNOF_TYPE,
					'type': t,
					'anno': [],
				}
			else:
				v = self.expr_value()
				rv = {
					'isa': 'ast_value',
					'kind': HLIR_VALUE_OP_ALIGNOF_VALUE,
					'value': v,
					'anno': [],
				}
			end_ti = self.tokenInfo()
			self.need(")")
			rv['ti'] = TextInfo(start=start_ti, mid=mid_ti, end=end_ti)
			return rv
